kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: src-ingress
spec:
  rules:
    - host: api.example.com # Your API domain
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: src-service
                port:
                  number: 80
